Supplement notes on basic knowledge and a data analysis project

--- a/notebooks/MachineLearing/02数据预备_清洗及特征工程/01连续型变量转换.ipynb
+++ b/notebooks/MachineLearing/02数据预备_清洗及特征工程/01连续型变量转换.ipynb
@@ -251,7 +251,8 @@
     "\n",
     "#StandardScaler\n",
     "std = preprocessing.StandardScaler()\n",
-    "Amount = RFM['Amount'].values.reshape(-1, 1) # -1是自动计算行,1表示一列数组\n",
+    "Amount = RFM['Amount'].values.reshape(-1, 1) \n",
+    "# reshape是numpy方法，这里是-1是自动计算行, 1表示一列数组，以此得到一个一列的二维数组从而匹配模型输入特征数据的要求\n",
     "\n",
     "std.fit(Amount)\n",
     "RFM['Amount_std'] = std.transform(Amount)\n",
@@ -1215,9 +1216,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "base",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
