--- a/notebooks/MachineLearing/02数据预备_清洗及特征工程/08单特征重要性评估.ipynb
+++ b/notebooks/MachineLearing/02数据预备_清洗及特征工程/08单特征重要性评估.ipynb
@@ -2,30 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "63a89195-9ce1-4d56-acdf-0b9667f9eb56",
+   "execution_count": 13,
+   "id": "babc2218",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "%matplotlib inline\n",
-    "import matplotlib.pyplot as plt"
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "570d7e9e-71ab-47cc-b1a2-75b223246af1",
+   "execution_count": 14,
+   "id": "7a0e5b6b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "titanic = pd.read_csv('data/titanic.csv')"
+    "def information_value(target, feature):\n",
+    "    \"\"\"\n",
+    "    Calculate the Information Value (IV) of a discrete variable.\n",
+    "    :param target: ndarray, actual values where 1 represents positive case and 0 represents negative case\n",
+    "    :param feature: ndarray, discrete variable to calculate IV\n",
+    "    :return: float, the Information Value of the input discrete feature\n",
+    "    \"\"\"\n",
+    "    iv_table = pd.DataFrame({'feature': feature, 'y': target})\n",
+    "    tot_good = np.sum(target)\n",
+    "    tot_bad = len(target) - tot_good\n",
+    "    # iv_table = iv_table.groupby('feature').agg({\n",
+    "    #     'y': {\n",
+    "    #         'bad_count': lambda x: len(x) - np.sum(x),\n",
+    "    #         'good_count': np.sum\n",
+    "    #     }\n",
+    "    # })['y'] ### Old version\n",
+    "    iv_table = iv_table.groupby('feature').agg(bad_count = ('y', lambda x: len(x) - np.sum(x)), good_count = ('y', 'sum'))\n",
+    "    iv_table['bad_percent'] = iv_table['bad_count'] / tot_bad\n",
+    "    iv_table['good_percent'] = iv_table['good_count'] / tot_good\n",
+    "    iv_table['WOE'] = np.log(iv_table['good_percent'] / iv_table['bad_percent'])\n",
+    "    iv_table['IV'] = (iv_table['good_percent'] - iv_table['bad_percent']) * iv_table['WOE']\n",
+    "    iv_value = np.sum(iv_table['IV'])\n",
+    "\n",
+    "    return iv_value, iv_table[['bad_count', 'bad_percent', 'good_count', 'good_percent', 'WOE', 'IV']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "00408f15-0265-4fb9-8a72-88d433073105",
+   "execution_count": 15,
+   "id": "e039d5b0",
    "metadata": {},
    "outputs": [
     {
@@ -166,19 +188,49 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "titanic = pd.read_csv('data/titanic.csv')\n",
     "titanic.head()"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "35346f58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         bad_count  bad_percent  good_count  good_percent       WOE        IV\n",
+      "feature                                                                      \n",
+      "1               80     0.145719         136      0.397661  1.003916  0.252928\n",
+      "2               97     0.176685          87      0.254386  0.364485  0.028321\n",
+      "3              372     0.677596         119      0.347953 -0.666483  0.219701\n",
+      "information value: 0.500949737583947\n"
+     ]
+    }
+   ],
+   "source": [
+    "feature = titanic.Pclass\n",
+    "target = titanic.Survived\n",
+    "\n",
+    "iv_value, iv_table = information_value(target, feature)\n",
+    "\n",
+    "print(iv_table)\n",
+    "print('information value:', iv_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "36a0c83b-5613-4b21-a2dc-48df7a643972",
+   "id": "ff567662",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -186,9 +238,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "AI_Env",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -200,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
